force-app/main/default/objects/KimbleOne__Timesheet__c/KimbleOne__Timesheet__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Timesheet</label>
    <nameField>
        <label>Timesheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>