force-app/main/default/objects/KimbleOne__Timesheet__c/fields/KimbleOne__ApprovalReason__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ApprovalReason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Reason</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ApprovalReason</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Timesheets (Approval Reason)</relationshipLabel>
    <relationshipName>TimesheetsApprovalReason</relationshipName>
    <type>Lookup</type>
</CustomField>