force-app/main/default/objects/KimbleOne__Timesheet__c/fields/KimbleOne__Approver1User10__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Approver1User10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 1.10</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TimesheetsApprover1User10</relationshipName>
    <type>Lookup</type>
</CustomField>