force-app/main/default/objects/KimbleOne__Timesheet__c/fields/KimbleOne__Approver1User1__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Approver1User1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 1.1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TimesheetsApprover1User1</relationshipName>
    <type>Lookup</type>
</CustomField>