force-app/main/default/objects/KimbleOne__Timesheet__c/fields/KimbleOne__Approver1User2__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Approver1User2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 1.2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TimesheetsApprover1User2</relationshipName>
    <type>Lookup</type>
</CustomField>