force-app/main/default/objects/KimbleOne__Timesheet__c/fields/KimbleOne__InvoicingCurrencyTotalEntryRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyTotalEntryRevenue__c</fullName>
    <label>Invoicing Currency Total Entry Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>