force-app/main/default/objects/KimbleOne__Timesheet__c/fields/KimbleOne__ResourcedActivity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcedActivity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Activity</label>
    <referenceTo>KimbleOne__ResourcedActivity__c</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>