force-app/main/default/objects/KimbleOne__Timesheet__c/fields/KimbleOne__TimeAdjustment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimeAdjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Adjustment</label>
    <referenceTo>KimbleOne__TimeAdjustment__c</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>