force-app/main/default/objects/KimbleOne__Timesheet__c/fields/KimbleOne__TotalEntryRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TotalEntryRevenue__c</fullName>
    <label>Total Entry Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>