force-app/main/default/objects/KimbleOne__Timesheet__c/fields/KimbleOne__TotalEntryUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TotalEntryUnits__c</fullName>
    <label>Total Entry Units</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>