force-app/main/default/objects/KimbleOne__Timesheet__c/fields/KimbleOne__TotalFactoredEntryUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TotalFactoredEntryUnits__c</fullName>
    <label>Total Factored Entry Units</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>