force-app/main/default/objects/KimbleOne__Timesheet__c/fields/KimbleOne__TotalRevenueUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TotalRevenueUnits__c</fullName>
    <label>Total Revenue Units</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>