force-app/main/default/objects/KimbleOne__Timesheet__c/validationRules/KimbleOne__TrackingPeriodBusinessUnitGroup.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__TrackingPeriodBusinessUnitGroup</fullName>
    <active>true</active>
    <description>Tracking Period on Timesheet has same Business Unit Group context as the Resourced Activity</description>
    <errorConditionFormula>KimbleOne__TimePeriod__r.KimbleOne__BusinessUnitGroup__c &lt;&gt; KimbleOne__ResourcedActivity__r.KimbleOne__BusinessUnitGroup__c</errorConditionFormula>
    <errorMessage>Timesheet Tracking Period has invalid Business Unit Group context</errorMessage>
</ValidationRule>