force-app/main/default/objects/KimbleOne__Timesheet__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Resource__c</columns>
    <columns>KimbleOne__ResourcedActivity__c</columns>
    <columns>KimbleOne__TimePeriod__c</columns>
    <columns>KimbleOne__ApprovalStatus__c</columns>
    <columns>KimbleOne__Approver1User__c</columns>
    <columns>KimbleOne__Approver2User__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>