force-app/main/default/objects/KimbleOne__Timesheet__c/listViews/KimbleOne__ApprovedTimesheets.listView-meta.xml
<ListView>
    <fullName>KimbleOne__ApprovedTimesheets</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Resource__c</columns>
    <columns>KimbleOne__ResourcedActivity__c</columns>
    <columns>KimbleOne__TimePeriod__c</columns>
    <columns>KimbleOne__Approver1User__c</columns>
    <columns>KimbleOne__Approver2User__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KimbleOne__ApprovalStatus__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Timesheets</label>
    <language>en_US</language>
</ListView>